<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bumaye</string>
    <string name="action_settings">Settings</string>
    <string name="nombreuser">Usuario:</string>
    <string name="passuser">Contrasenya:</string>
    <string name="entrar">Regist</string>
    <string name="regist">Registrar</string>
    <string name="passconf">Confirmar contraseña</string>
    <string name="mail">E-mail</string>
    <string name="open_drawer">Drawer abierto</string>
	<string name="close_drawer">Drawer cerrado</string>
	
	<string name="app_id" translate="false">334767796097</string>

     <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
       <item>Nombre</item>
        <item>Inventario</item>
        <item>Mapa</item>
        <item>Opciones</item>
    </string-array>
     <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/bumayeicon</item>
    </array>
     
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="ok">Luchar</string>
    <string name="cancel">Cancelar</string>
    <string name="aceptar">Aceptar</string>
</resources>
