<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ea.grupo2.Bumaye.android.RegisterActivity"
    android:background="@drawable/fondoviejales" >

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="@dimen/Edittext" >

    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_below="@+id/username"
        android:text="@string/passuser"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/Textview" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_below="@+id/password"
        android:text="@string/passconf"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/Textview" />

    <EditText
        android:id="@+id/passconf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_below="@+id/TextView01"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="@dimen/Edittext" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="41dp"
        android:text="@string/nombreuser"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/Textview" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:textSize="@dimen/Edittext">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView02"
        android:layout_below="@+id/TextView02"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/username"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/password"
        android:text="@string/mail"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/Textview" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/password"
        android:layout_toLeftOf="@+id/TextView03"
        android:onClick="Regist"
        android:text="@string/entrar"
        android:textSize="@dimen/Button" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/passconf"
        android:layout_alignLeft="@+id/mail"
        android:layout_marginLeft="18dp"
        android:clickable="true"
        android:onClick="Logear"
        android:text="Ya tienes cuenta?" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignRight="@+id/mail"
        android:clickable="true"
        android:onClick="Logear"
        android:text="Logeate!" />

</RelativeLayout>
